# pymseed

./: .gitignore  CHANGELOG.md  README.md  development.md  pyproject.toml  setup.py
.github/workflows/: release.yml
cffi_module/: cffi_defs.py
examples/: continuous_miniseed_creation.py  read_numpy.py  read_traces.py  stream_stats.py  stream_timewindow.py  write_with_buffer.py
src/pymseed/: __init__.py  __version__.py  _extra_headers_jsonschema.py  _json.py  clib.py  exceptions.py  logging.py  msrecord.py  msrecord_buffer_reader.py  msrecord_reader.py  msrecord_validator.py  mstracelist.py  util.py
tests/: test_logging.py  test_logging_threaded.py  test_msrecord.py  test_msrecord_buffer_reader.py  test_msrecord_filelike_reader.py  test_msrecord_reader.py  test_msrecord_validator.py  test_mstracelist.py  test_record_validator.py  test_util.py
tests/data/: packtest_sine2000.mseed2  packtest_sine500.mseed2  packtest_sine500x3.mseed2  packtest_sine500x3.mseed3  testdata-60sec-period.mseed3  testdata-COLA-signal.mseed3
